# fighter-sim

./: .gitignore  BallOut.csv  CMakeLists.txt  JSBout172B.csv  README.md  build.sh
Q&A/: JSBSim 启动流程与关键属性 flight_script.txt 的解析逻辑细节 PID 入口,参数,调参点  告诉我目录各个文件的作用，尽可能详细。我自己去改。
Q&A/JSBSim的具体配置/:  代码里对 JSBSim 的设置（比如初始化参数、属性写入、控制输入）  机型数据配置（third_partyfgdata 里的 Aircraftc172p 等 XML系统文件）  脚本如何映射到 JSBSim 属性（例如 fcs*、controls*、propulsion* 的含义）
aircraft/c172p/: c172p.xml
aircraft/c172p/Systems/: c172p-engine.xml  fuel.xml  indicated-airspeed.xml
aircraft/minimal/: minimal.xml
config/: flight_script.txt  flight_script.yaml
include/: flight_controller.h  jsbsim_adapter.h  physics.h  pid.h  renderer.h
src/: flight_controller.cpp  jsbsim_adapter.cpp  main.cpp  physics.cpp  pid.cpp  renderer.cpp
